# filter-repo-rs

./: CHANGELOG.md
filter-repo-rs/: Cargo.toml
filter-repo-rs/benches/: commit_rewrite.rs  detect.rs  replacer.rs
filter-repo-rs/src/: analysis.rs  detect.rs  filechange.rs  finalize.rs  gitutil.rs  lib.rs  message.rs  opts.rs  pipes.rs  stream.rs
filter-repo-rs/src/sanity/: debug.rs
filter-repo-rs/tests/: alloc_probe.rs  analyze.rs  blobs_more.rs  config.rs  detect_secrets.rs
filter-repo-rs/tests/common/: mod.rs
